--- a/FrontEnd/templates/index.html
+++ b/FrontEnd/templates/index.html
@@ -1,6 +1,18 @@
 {% extends "base.html" %}
 
-{% block titulo %}<title>Home</title>{% endblock %}
+{% block head %}
+<style>
+    #homeLinkContainer{
+        background-color: white;
+        width: fit-content + 10px;
+        height: fit-content + 10px;
+    }
+    #homeLink{
+        color: #4D6AAC;
+    }
+</style>
+<title>Home</title>
+{% endblock %}
 
 {% block background %}<body class="fundo">{% endblock %}
 
