--- a/FrontEnd/templates/sobre.html
+++ b/FrontEnd/templates/sobre.html
@@ -1,6 +1,18 @@
 {% extends "base.html" %}
 
-{% block titulo %}<title>Sobre</title>{% endblock %}
+{% block head %}
+<style>
+    .sobreLinkContainer{
+        background-color: white;
+        width: fit-content + 5px;
+        height: fit-content + 10px;
+    }
+    .sobreLink{
+        color: #4D6AAC;
+    }
+</style>
+<title>Sobre</title>
+{% endblock %}
 
 {% block background %}<body class="fundo">{% endblock %}
 
