--- a/FrontEnd/static/css/styles.css
+++ b/FrontEnd/static/css/styles.css
@@ -1,8 +1,10 @@
-body {
+html, body {
     box-sizing: border-box;
+    width: 100%;
     padding: 0;
     margin: 0;
     background-color:#FCFDFF;
+    overflow-x: hidden;
 }
 
 *{
@@ -105,6 +107,8 @@ footer{
 .flex_container {
     width: 100%;
     height: auto;
+    display: flex;
+    flex-direction: row;
 }
 
 .flexbox_filtro {
@@ -242,4 +246,84 @@ footer{
 .graficogastos{
     float: left;
     width: 40%;
+}
+
+.chart-container{
+    width: 100%;
+    height: 480px;
+}
+
+
+
+/* responsividade */
+
+@media screen and (max-width: 600px){
+    header{
+        flex-direction: column;
+    }
+
+    li, a{
+        font-size: 14px;
+    }
+
+    .texto h1{
+        font-size: 3vh !important; 
+    } 
+
+    h2{
+        max-width: 100%;
+        margin: 10%;
+    }
+
+    .flex_container{
+        flex-direction: column;
+        align-items: center;
+    }
+    .graficocasos{
+        float:none;
+    }
+    nav{
+        padding: 0;
+    }
+    h1{
+        margin: 0;
+        max-width: 100%;
+    }
+    .row{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .coluna{
+        width: 70%;
+    }
+    .container{
+        padding: 0%;
+    }
+    .capa{
+        padding-left: 0% !important;
+    }
+    .capa h2{
+        font-size: 2vh !important;
+    }
+    .capa2{
+        width: 100% !important;
+    }
+    .capa2 h3{
+        font-size: 2vh !important;
+    }
+    .logo{
+        width: 50%;
+    }
+    .texto h2{
+        font-size: 2vh !important;
+    }
+    #chart{
+        height: 480px;
+    }
+    .flexbox_filtro{
+        max-width: 360px;
+        margin: 0%;
+        border-radius: 0%;
+    }
 }
