--- a/FrontEnd/templates/consultar.html
+++ b/FrontEnd/templates/consultar.html
@@ -1,6 +1,18 @@
 {% extends "base.html" %}
 
-{% block titulo %}<title>Consultar</title>{% endblock %}
+{% block head %}
+<style>
+  #consultarLinkContainer{
+      background-color: white;
+      width: fit-content + 10px;
+      height: fit-content + 10px;
+  }
+  #consultarLink{
+      color: #4D6AAC;
+  }
+</style>
+<title>Consultar</title>
+{% endblock %}
 
 {% block background %}<body class="fundo" style="background: #f5f4f4;">{% endblock %}
 
@@ -10,18 +22,16 @@
   <div class="flex_container">
       <div class="flexbox_filtro consultar">
       <div class="consulta">
-          <!-- <form id="form" action="/graficos" method="get"> -->
-              <h3 id="titulo-primario">Filtros</h3>
+              <h3 id="titulo-primario">Filtro</h3>
               <p>
-              <label for="processo" id="titulo-secundario">Processo:</label> <br>
+              <label for="processo" id="titulo-secundario">Método:</label> <br>
               <div class="dropdown">
                   <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Método
+                  
                   </button>
                   <div class="dropdown-menu" aria-labelledby="dropdownButton">
                   <a class="dropdown-item" type="button" onclick="updateValues('casos')">Casos</a>
                   <a class="dropdown-item" type="button" onclick="updateValues('srespgrave')">Sindrome Respiratória Grave</a>
-                  <!-- <a class="dropdown-item" type="button" onclick="updateValues('doenca')">Doença</a> -->
                   </div>
               </div>
               </p>
@@ -32,7 +42,7 @@
               <div class="dropdown">
                   <button class="btn btn-primary dropdown-toggle" type="button" id="yearDropdownButton" data-toggle="dropdown"
                   aria-haspopup="true" aria-expanded="false">
-                  Anos
+                  
                   </button>
                   <div class="dropdown-menu" aria-labelledby="yearDropdownButton">
                   <form id="yearForm">
@@ -61,11 +71,11 @@
               </div>
               </p>     
               <p>
-              <label for="cidade" id="titulo-secundario">Cidade:</label> <br>
+              <label for="cidade" id="titulo-secundario">Cidades:</label> <br>
               <div class="dropdown">
                   <button class="btn btn-primary dropdown-toggle" type="button" id="cityDropdownButton" data-toggle="dropdown"
                   aria-haspopup="true" aria-expanded="false">
-                  Cidades
+                  
                   </button>
                   <div class="dropdown-menu" aria-labelledby="cityDropdownButton">
                   <form id="cityForm">
@@ -86,22 +96,16 @@
               </div>
               </p>
               <div >
-                  <!-- class="filtro_botao" -->
-                  <button class="btn btn-success" id="openChartButton">Abrir Gráfico</button>
+                  <button class="btn btn-success" id="openChartButton">Gerar Gráfico</button>
               </div>
-          <!-- </form> -->
       </div>
       </div>
+    <div class="chart-container">
+        <canvas id="chart" style="height: 480px;"></canvas>
+    </div>
   </div>
 
-  <div class="chart-container">
-      <canvas id="chart"></canvas>
-  </div>
-<!--         <script src="https://cdn.jsdelivr.net/npm/chart.js@4.3.0/dist/chart.umd.min.js"></script>
-      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script> 
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script> -->
-  </div>
+</div>
 
   <script>
       const yearForm = document.getElementById('yearForm');
@@ -119,10 +123,7 @@
         selectedValueElement.textContent = option;
         variablesElement.textContent = JSON.stringify(variables[option], null, 2);
       }
-  
-  /*     yearDropdownButton.addEventListener('click', () => toggleDropdown(yearDropdownButton));
-      cityDropdownButton.addEventListener('click', () => toggleDropdown(cityDropdownButton)); */
-  
+    
       const chartData = {
         labels: [],
         datasets: []
@@ -197,12 +198,7 @@
             cityData["Jacareí"] = [101, 1304, 1603, 977, 0];
             cityData["São José dos Campos"] = [540, 5838, 6158, 3541, 0];
             cityData["Taubaté"] = [318, 1231, 2006, 777, 0];
-          } /* else if (option === 'doenca') {
-            // Valores para Doença
-            cityData["Jacareí"] = [5, 10, 15, 20];
-            cityData["São José dos Campos"] = [10, 15, 20, 25];
-            cityData["Taubaté"] = [2, 4, 6, 8];
-          } */
+          } 
           
           console.log(cityData);
         }
